# my_krml_25176165

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
lab3_api/: pyproject.toml
lab3_api/app/: main.py
lab3_api/models/: sgd_pipeline.joblib
models/: ohe.joblib  performance.py  scaler.joblib  train_preds.csv  val_preds.csv
src/my_krml_25176165/: __init__.py  github.txt
src/my_krml_25176165/api/: README.md  logit_model.pkl  logit_scaler.pkl  main.py  poly_logit_pipeline.pkl  requirements.txt  sgd_model.pkl  sgd_scaler.pkl  xgb_model.pkl
src/my_krml_25176165/data/: sets.py
src/my_krml_25176165/models/: 36120-25SP-group30-25176165-AT1-experiment-1.ipynb  36120-25SP-group30-25176165-AT1-experiment-2.ipynb  36120-25SP-group30-25176165-AT1-experiment-3.ipynb  36120-25SP-group30-25176165-AT1-experiment-4.ipynb  36120-25SP-group30-25176165-AT1-experiment-5.ipynb  36120_25SP_group30_25176165_AT1_experiment_4.ipynb  performance.py  performance.py.save
src/my_krml_25176165/notebooks/: 36120-25SP-group30-25176165-AT1-experiment-1.ipynb  36120_25SP_group30_25176165_AT1_experiment_2.ipynb  36120_25SP_group30_25176165_AT1_experiment_3.ipynb
tests/: test_my_krml_25176165.py
tests/data/: test_sets.py
tests/features/: dates.py
tests/models/: performance.py
work/adv_mla_lab_2/: .gitignore
work/adv_mla_lab_2/models/: linear_poly_2.joblib  ohe.joblib  ridge_poly_2.joblib  scaler.joblib
work/models/: baseline_model.joblib  label_encoders.joblib  ohe.joblib  scaler.joblib
(+13 files in other folders)
