[tool.poetry]
name = "my_krml_25176165"
version = "0.1.0"
description = "A Python package for NBA data analysis"
authors = ["Nian-Ya,Weng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
