[tool.poetry]
name = "my_krml_25176165"
version = "2025.0.3.0"
description = "A Python package for NBA data analysis"
authors = ["Nian-Ya,Weng", "Amanda <your@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_krml_25176165", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
